--- a/templates/my_record.html
+++ b/templates/my_record.html
@@ -39,6 +39,8 @@
 			}
 		</style>
 		<title>Speech to Text</title>
+        <script type="text/javascript" src="/static/js/config.js"></script>
+        <script type="text/javascript" src="/static/js/ajax_lib.js"></script>
 		<script type="text/javascript" src="/static/js/recorder.js"></script>
 	</head>
 	<body onload="init();">
