--- a/templates/my_record.html
+++ b/templates/my_record.html
@@ -48,7 +48,8 @@
         <p>Click on the below button and speak something...</p>
         <p><button type="button" onclick="runSpeechRecognition()">Speech to Text</button> &nbsp; <span id="action"></span></p>
         <div id="output" class="hide"></div>
-		<div class="textwrapper"><textarea rows="1" cols="100%" style="height:1em;" id="text" name="text"></textarea></div>
+		<div class="textwrapper"><textarea rows="30" cols="100%"
+                                           style="height:1em;" id="text" name="text"></textarea></div>
         <script type="text/javascript" src="/static/js/my_record.js"></script>
 		<script>
 			var observe;
