--- a/templates/my_record copy 2.html
+++ b/templates/my_record copy 2.html
@@ -38,39 +38,26 @@
 			  padding:3px;
 			}
 		</style>
-<!--		<script src="jquery-3.5.1.min.js"></script>-->
-		<script type="text/javascript" src="/static/js/ajax_lib.js"></script>
-{#		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>#}
 		<title>Speech to Text</title>
+        <script type="text/javascript" src="/static/js/config.js"></script>
+        <script type="text/javascript" src="/static/js/ajax_lib.js"></script>
+		<script type="text/javascript" src="/static/js/recorder.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</head>
-	<body >
-		<h2>VietNamese Speech to Text FROM UPLOADING FILE</h2>
-		<p>*.wav, *.flac, *.mp3</p>
-		<button id="stream" type="button" onclick="location.href='/record_audio'">Streaming Semi-auto STT</button>
-		<button id="stream_auto" type="button" onclick="location.href='/record_audio_auto'">Streaming Auto STT</button>
-        <form id="upload-file" method="post" enctype="multipart/form-data">
-                <input type="file" id="filename" name="filename">
-				<button id="upload-file-btn" type="button">Upload</button>
-<!--                <input type="submit" value="Process" formmethod="post" formenctype="multipart/form-data" formaction="/save_file_from_upload">-->
-        </form>
-        <div class="textwrapper"><textarea rows="20" cols="100%" style="height:1em;" id="text" name="text"></textarea></div>
+	<body onload="init();">
+		<h2>Vietnamese Speech to Text</h2>
+		<!-- <p>Click on the below button and speak something...</p> -->
+		<div class="alert alert-danger" id="success-alert">
+			<!-- <button type="button" class="close" data-dismiss="alert">x</button> -->
+			<strong>BẠN HÃY NÓI TO VÀ RÕ LÊN TÍ NỮA! </strong>.
+		  </div>
+        <p><button type="button" onclick="runSpeechRecognition()">Refresh</button> &nbsp; <span id="action"></span></p>
+        <div id="output" class="hide"></div>
+		<div class="textwrapper"><textarea rows="30" cols="100%"
+                                           style="height:1em;" id="text" name="text"></textarea></div>
+        <script type="text/javascript" src="/static/js/my_record_copy.js"></script>
 		<script>
-			$(function() {
-				$('#upload-file-btn').click(function() {
-					var form_data = new FormData($('#upload-file')[0]);
-					$.ajax({
-						type: 'POST',
-						url: '/save_file_from_upload',
-						data: form_data,
-						contentType: false,
-						cache: false,
-						processData: false,
-						success: function(data) {
-							document.getElementById("text").value = data;
-						},
-					});
-				});
-			});
 			var observe;
 			if (window.attachEvent) {
 				observe = function (element, event, handler) {
